Add unit test project. Add update user endpoint.

--- a/Service.UserManager/appsettings.json
+++ b/Service.UserManager/appsettings.json
@@ -3,6 +3,12 @@
     "RedisCloud": ""
   },
   "PrivateSalt": "",
+  "Mail": {
+    "Host": "",
+    "Port": 587,
+    "User": "",
+    "Pass": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
